--- a/src/app/stagiaires/list/list.component.html
+++ b/src/app/stagiaires/list/list.component.html
@@ -106,7 +106,7 @@
   <tfoot>
     <tr> 
       <td colspan = "5"  >
-      {{getNumberofStagiaires()}}/{{stagiaires.length}}
+      {{getDisplayRowsNumber()}}/{{stagiaires.length}}
       </td>
     </tr>
   
