--- a/src/app/stagiaires/list/list.component.html
+++ b/src/app/stagiaires/list/list.component.html
@@ -117,15 +117,17 @@
       </td>
 
       
-
+      <a [routerLink]="['/', 'stagiaires', 'add']" class="btn btn-primary">
+        Ajouter
+      </a>
   <button type="button" (click)="goToAdd()">
-    Add
+    AddE
   </button>
     </tr>
   
   </tfoot>
   </table>
 
-  <a [routerLink]="['/', 'stagiaire', 'add']" class="btn btn-primary">
+  <a [routerLink]="['/', 'stagiaires', 'add']" class="btn btn-primary">
     Ajouter
   </a>
