--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-
 <!-- Etageres à routes : routes-outlet-->
 
 <nav>
@@ -7,7 +6,7 @@
       <a [routerLink]="'/stagiaires'">Liste des stagiaires</a>
     </li>
     <li>
-      <a [routerLink]="'/detail'">deail</a>
+      <a [routerLink]="'/detail'">detail</a>
     </li>
   </ul>
 </nav>
