List component html ts scss

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
       <a [routerLink]="'/stagiaires'">Liste des stagiaires</a>
     </li>
     <li>
-      <a [routerLink]="'/detail'">detail</a>
+      <a [routerLink]="'/detail'">Détails</a>
     </li>
   </ul>
 </nav>
