--- a/src/app/poes/component/list/list.component.html
+++ b/src/app/poes/component/list/list.component.html
@@ -18,34 +18,37 @@
 
   <tbody>
     <ng-container *ngFor="let poe of poes">
-      <tr *ngIf="showLi === 'All' ? true : poe.poeType === showLi">
+    <tr *ngIf="(showLi === 'All' ) || (poe.poeType === showLi)">
+
         <td>
           <span
             [ngClass]="{
               bubble: true,
               male: poe.poeType === 'POEI',
               female: poe.poeType === 'POEC'
-            }"
-            (click)="goToDetail(stagiaire.id)"
-          >
-            {{ stagiaire | initials }}
+            }">
+            {{poe.poeType}}
+           <!--(click)="goToDetail(stagiaire.id)" 
+           {{ poe | initials:full:lastNameFirst }}    -->   
           </span>
         </td>
         <td>
-          {{ stagiaire.lastName | uppercase }}
+            {{ poe.title | uppercase }}
         </td>
         <td>
-          {{ stagiaire.firstName }}
+          {{ poe.beginDate | date : "dd/MM/YYYY"}}
         </td>
         <td>
-          {{ stagiaire.gender }}
+          {{ poe.endDate | date : "dd/MM/YYYY" }}
         </td>
         <td>
-          {{ stagiaire.birthDate | date : "dd/MM/YYYY" }}
+          {{ poe.poeType | uppercase }}
         </td>
+
         <td>
-          <button mat-mini-fab color="primary" (click)="onDelete(poe)">
-            <mat-icon>delete</mat-icon>
+
+          <button mat-mini-fab color="primary" (click)="onDelete(poe)"> <!-- implementer onDelete dans list.component.ts -->
+            <!--<mat-div>delete</mat-icon>  A FAIRE voir css-->
           </button>
         </td>
       </tr>
@@ -54,35 +57,35 @@
 
   <tfoot>
     <tr>
-      <td colspan="5">{{ getDisplayRowsNumber() }}/{{ stagiaires.length }}</td>
+      <td colspan="5">{{ getDisplayRowsNumber() }}/{{ poes.length }}</td> <!-- TODO-->
     </tr>
   </tfoot>
 </table>
 
-<a [routerLink]="['/', 'stagiaire', 'add']" class="btn btn-primary">
+<a [routerLink]="['/', 'poes', '/','add']" class="btn btn-primary">
   Ajouter
 </a>
 
 <button
   type="button"
-  (click)="showLi = 'A'"
-  [ngClass]="{ 'is-selected': showLi === 'A' }"
->
+  (click)="showLi = 'All'"
+  [ngClass]="{ 'is-selected': showLi === 'All' }"
+  >
   Tous
 </button>
 
 <button
   type="button"
-  (click)="showLi = 'F'"
-  [ngClass]="{ 'is-selected': showLi === 'F' }"
+  (click)="showLi = 'POEC'"
+  [ngClass]="{ 'is-selected': showLi === 'POEC' }"
 >
-  F
+POEC
 </button>
 
 <button
   type="button"
-  (click)="showLi = 'M'"
-  [ngClass]="{ 'is-selected': showLi === 'M' }"
+  (click)="showLi = 'POEI'"
+  [ngClass]="{ 'is-selected': showLi === 'POEI' }"
 >
-  M
+POEI
 </button>
