--- a/src/app/poes/component/list/list.component.html
+++ b/src/app/poes/component/list/list.component.html
@@ -62,6 +62,6 @@
   </tfoot>
 </table>
 
-<a [routerLink]="['/', 'poes', '/', 'add']" class="btn btn-primary">
+<a [routerLink]="['/', 'poes', 'add']" class="btn btn-primary">
   Ajouter
 </a>
