--- a/src/app/stagiaires/list/list.component.html
+++ b/src/app/stagiaires/list/list.component.html
@@ -1,12 +1,8 @@
-
-
-
-
-
 <div [ngSwitch]="showLi">
     <div *ngSwitchCase="'A'">Tous les stagiaires</div>
     <div *ngSwitchCase="'F'">Féminin</div>
     <div *ngSwitchCase="'M'">Masculin</div>
+    <div *ngSwitchCase="'X'">Autre</div>
   </div>
   
   <ul><!-- Unordered List-->
@@ -36,6 +32,10 @@
   
     <button type="button" (click)="showLi='M'" [ngClass]="{'is-selected': showLi === 'M'}">
       M
+    </button>
+
+    <button type="button" (click)="showLi='X'" [ngClass]="{'is-selected': showLi === 'X'}">
+      X
     </button>
   </div>
   
@@ -83,7 +83,12 @@
     <!-- <li *ngIf="(showLi === 'A') ? true : stagiaire.gender === showLi"> -->
   <tr>
     <td>
-      <span (click)="goToDetail(stagiaire.id)" [ngClass]="{'bubble': true, 'male': stagiaire.gender === 'M', 'female': stagiaire.gender === 'F'}">      {{ stagiaire | initials : full:lastNameFirst }} </span>
+      <span (click)="goToDetail(stagiaire.id)" [ngClass]="{'bubble': true, 
+      'male': stagiaire.gender === 'M', 
+      'female': stagiaire.gender === 'F',   
+      'other': stagiaire.gender === 'X'}">    
+      {{ stagiaire | initials : full:lastNameFirst }} 
+    </span>
 
     </td>
       <td>
@@ -92,14 +97,14 @@
       <td>
         {{ stagiaire.firstName }}
       </td>
-      <td [ngClass]="{'female': stagiaire.gender === 'F','male': stagiaire.gender === 'M'}">
+      <td [ngClass]="{'female': stagiaire.gender === 'F','male': stagiaire.gender === 'M','other': stagiaire.gender === 'X'}">
         {{stagiaire.gender}}
       </td>
       <td>
         {{ stagiaire.birthDate | date : 'L/dd/yyyy'}} 
       </td>
       <td>
-      <button mat-mini-fab color="primary" (click)="onDelete(stagiaire)">
+      <button mat-mini-flat class="material-icons color_green" (click)="onDelete(stagiaire)">
         <mat-icon>delete</mat-icon>
       </button>
 
