--- a/src/app/stagiaires/list/list.component.html
+++ b/src/app/stagiaires/list/list.component.html
@@ -1,70 +1,25 @@
-<div [ngSwitch]="showLi">
-    <div *ngSwitchCase="'A'">Tous les stagiaires</div>
-    <div *ngSwitchCase="'F'">Féminin</div>
-    <div *ngSwitchCase="'M'">Masculin</div>
-    <div *ngSwitchCase="'X'">Autre</div>
-  </div>
-  
-  <ul><!-- Unordered List-->
-  
-    <ng-container *ngFor="let stagiaire of stagiaires"><!-- *ngFor => Directive de Structure -->
-      <li *ngIf="isShown(stagiaire)"><!-- *ngIf => Directive de structure qui injectera l'élément dans le DOM si vrai -->
-      <!-- <li *ngIf="(showLi === 'A') ? true : stagiaire.gender === showLi"> -->
-          {{ stagiaire.firstName }} [{{ stagiaire.gender }}]
-      </li>
-  
-  
-    </ng-container>
-  </ul>
-  
-  
-  <div>
-  
-  
-  
-    <button type="button" (click)="showLi = 'A'" [ngClass]="{'is-selected': showLi === 'A'}">
-      Tous
-    </button>
-  
-    <button type="button" (click)="showLi='F'" [ngClass]="{'is-selected': showLi === 'F'}">
-      F
-    </button>
-  
-    <button type="button" (click)="showLi='M'" [ngClass]="{'is-selected': showLi === 'M'}">
-      M
-    </button>
+<div>
 
-    <button type="button" (click)="showLi='X'" [ngClass]="{'is-selected': showLi === 'X'}">
-      X
-    </button>
-  </div>
-  
-  <p>showLi vaut : {{ showLi }}</p>
-  
-  <p>
-    <button type="button" (click)="full = true" [ngClass]="{'is-selected': full==true}">
-      Full
-    </button>
-  
-  
-    <button type="button" (click)="full = false" [ngClass]="{'is-selected': full==false}">
-      NotFull
-    </button>
-  </p>
-  
-  <p>
-    <button type="button" (click)="lastNameFirst = true" [ngClass]="{'is-selected': lastNameFirst==true}">
-      lastNFirst 
-    </button>
-    <button type="button" (click)="lastNameFirst = false"[ngClass]="{'is-selected': lastNameFirst==false}">
-      Not lastNFirst
-    </button>
-  </p>
-  
-  
-  
-  <table>
-  
+  <button type="button" (click)="showLi = 'A'" [ngClass]="{'is-selected': showLi === 'A'}">
+    Tous
+  </button>
+
+  <button type="button" (click)="showLi='F'" [ngClass]="{'is-selected': showLi === 'F'}">
+    Femme
+  </button>
+
+  <button type="button" (click)="showLi='M'" [ngClass]="{'is-selected': showLi === 'H'}">
+    Homme
+  </button>
+
+  <button type="button" (click)="showLi='X'" [ngClass]="{'is-selected': showLi === 'X'}">
+    Autre
+  </button>
+
+</div>
+
+<table>
+
   <thead>
     <tr>
       <th>Initials</th>
@@ -75,64 +30,58 @@
       <th>&nbsp;</th>
     </tr>
   </thead>
-  
+
   <tbody>
-  
-  <ng-container *ngFor="let stagiaire of stagiaires"><!-- *ngFor => Directive de Structure -->
-  <ng-container *ngIf="isShown(stagiaire)"><!-- *ngIf => Directive de structure qui injectera l'élément dans le DOM si vrai -->
-    <!-- <li *ngIf="(showLi === 'A') ? true : stagiaire.gender === showLi"> -->
-  <tr>
-    <td>
-      <span (click)="goToDetail(stagiaire.id)" [ngClass]="{'bubble': true, 
-      'male': stagiaire.gender === 'M', 
-      'female': stagiaire.gender === 'F',   
-      'other': stagiaire.gender === 'X'}">    
-      {{ stagiaire | initials : full:lastNameFirst }} 
-    </span>
 
-    </td>
-      <td>
-        {{ stagiaire.lastName | uppercase}}
-      </td>
-      <td>
-        {{ stagiaire.firstName }}
-      </td>
-      <td [ngClass]="{'female': stagiaire.gender === 'F','male': stagiaire.gender === 'M','other': stagiaire.gender === 'X'}">
-        {{stagiaire.gender}}
-      </td>
-      <td>
-        {{ stagiaire.birthDate | date : 'L/dd/yyyy'}} 
-      </td>
-      <td>
-      <button mat-mini-flat class="material-icons color_green" (click)="onDelete(stagiaire)">
-        <mat-icon>delete</mat-icon>
-      </button>
+    <ng-container *ngFor="let stagiaire of stagiaires"><!-- *ngFor => Directive de Structure -->
+      <ng-container
+        *ngIf="isShown(stagiaire)"><!-- *ngIf => Directive de structure qui injectera l'élément dans le DOM si vrai -->
+        <!-- <li *ngIf="(showLi === 'A') ? true : stagiaire.gender === showLi"> -->
+        <tr>
+          <td>
+            <span (click)="goToDetail(stagiaire.id)" [ngClass]="{'bubble': true, 
+                'male': stagiaire.gender === 'M', 
+                'female': stagiaire.gender === 'F',   
+                'other': stagiaire.gender === 'X'}">
+              {{ stagiaire | initials : full:lastNameFirst }}
+            </span>
 
-      </td>
-  </tr>
-  </ng-container>
-  </ng-container>
+          </td>
+          <td>
+            {{ stagiaire.lastName | uppercase}}
+          </td>
+          <td>
+            {{ stagiaire.firstName }}
+          </td>
+          <td
+            [ngClass]="{'female': stagiaire.gender === 'F','male': stagiaire.gender === 'M','other': stagiaire.gender === 'X'}">
+            {{stagiaire.gender}}
+          </td>
+          <td>
+            {{ stagiaire.birthDate | date : 'L/dd/yyyy'}}
+          </td>
+          <td>
+            <button mat-mini-flat class="material-icons color_green" (click)="onDelete(stagiaire)">
+              <mat-icon>delete</mat-icon>
+            </button>
+
+          </td>
+        </tr>
+      </ng-container>
+    </ng-container>
   </tbody>
-  
-  
+
+
   <tfoot>
-    <tr> 
-      <td colspan = "5"  >
-      {{getDisplayRowsNumber()}}/{{stagiaires.length}}
+    <tr>
+      <td colspan="5">
+        {{getDisplayRowsNumber()}}/{{stagiaires.length}}
       </td>
 
-      
-      <a [routerLink]="['/', 'stagiaires', 'add']" class="btn btn-primary">
+      <button type="button" (click)="goToAdd()">
         Ajouter
-      </a>
-  <button type="button" (click)="goToAdd()">
-    AddE
-  </button>
+      </button>
     </tr>
-  
-  </tfoot>
-  </table>
 
-  <a [routerLink]="['/', 'stagiaires', 'add']" class="btn btn-primary">
-    Ajouter
-  </a>
+  </tfoot>
+</table>
