--- a/src/app/poes/component/add/add.component.html
+++ b/src/app/poes/component/add/add.component.html
@@ -1,55 +1,52 @@
-<form [formGroup]="addStagiaireForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="addPoeForm" (ngSubmit)="onSubmit()">
     <!-- form fields go here -->
     <mat-form-field>
-        <input matInput placeholder="Nom du stagiaire..." type="text" formControlName="lastName">
-        <mat-error *ngIf="addStagiaireForm.controls['lastName'].errors">
-            Le nom du stagiaire est obligatoire !
+        <input matInput placeholder="Nom de formation..." type="text" formControlName="title">
+        <mat-error *ngIf="addPoeForm.controls['title'].errors">
+            Le nom de la formation est obligatoire!
         </mat-error>
     </mat-form-field>
 
-    <mat-form-field>
-        <input matInput placeholder="Prénom du stagiaire..." type="text" formControlName="firstName">
-        <mat-error *ngIf="addStagiaireForm.controls['firstName'].errors">
-            Le prénom du stagiaire est obligatoire !
-        </mat-error>
-    </mat-form-field>
+
 
     <mat-form-field appearance="fill">
-        <mat-label>Choose a date</mat-label>
-        <input matInput [matDatepicker]="picker" formControlName="birthDate">
+        <mat-label>Date du début</mat-label>
+        <input matInput [matDatepicker]="picker" formControlName="beginDate">
         <mat-hint>DD/MM/YYYY</mat-hint>
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
 
-        <mat-error *ngIf="addStagiaireForm.controls['birthDate'].errors && addStagiaireForm.controls['birthDate'].touched">
-            <span *ngIf="addStagiaireForm.controls['birthDate'].hasError('required')">
-                La date de naissance est obligatoire.
-            </span> 
-            <span *ngIf="addStagiaireForm.controls['birthDate'].hasError('dateLessThan')">
-                Le stagiaire n'a pas 18 ans...
-            </span>         
+        <mat-error *ngIf="addPoeForm.controls['beginDate'].errors && addPoeForm.controls['beginDate'].touched">
+            <span *ngIf="addPoeForm.controls['beginDate'].hasError('required')">
+                La date du début est obligatoire.
+            </span>
+
         </mat-error>
     </mat-form-field>
 
-    <mat-form-field>
-        <input matInput placeholder="Email..." type="text" formControlName="email">
-        <mat-error *ngIf="addStagiaireForm.controls['email'].errors">
-            L'adresse email est obligatoire ou n'est pas de la bonne forme
-        </mat-error>
-    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>La date de fin</mat-label>
+      <input matInput [matDatepicker]="picker" formControlName="endDate">
+      <mat-hint>DD/MM/YYYY</mat-hint>
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
 
-    <mat-form-field>
-        <input matInput placeholder="Téléphone..." type="text" formControlName="phoneNumber">
-    </mat-form-field>
+      <mat-error *ngIf="addPoeForm.controls['endDate'].errors && addPoeForm.controls['endDatee'].touched">
+          <span *ngIf="addPoeForm.controls['endDate'].hasError('required')">
+              La date de fin est obligatoire.
+          </span>
 
-    <mat-radio-group formControlName="gender">
-        <mat-radio-button [value]="'M'">Masculin</mat-radio-button>
-        <mat-radio-button [value]="'F'">Féminin</mat-radio-button>
+      </mat-error>
+  </mat-form-field>
+
+    <mat-radio-group formControlName="poeType">
+        <mat-radio-button [value]="'POEI'">POEI</mat-radio-button>
+        <mat-radio-button [value]="'POEC'">POEC</mat-radio-button>
     </mat-radio-group>
 
-    <button mat-raised-button color="primary" type="submit" [disabled]="addStagiaireForm.invalid">
-        Add
+    <button mat-raised-button color="primary" type="submit" [disabled]="addPoeForm.invalid">
+        Ajouter
     </button>
 
-    {{ addStagiaireForm.controls['birthDate'].errors | json }}
+    {{ addPoeForm.controls['birthDate'].errors | json }}
 </form>
