--- a/src/app/stagiaires/list/list.component.scss
+++ b/src/app/stagiaires/list/list.component.scss
@@ -1,24 +1,159 @@
 $dark: rgb(88, 42, 42);
 $light: #ebc4a4;
+$mid: #b4947f;
 
 /**
 * SCSS Rules
 **/
 
+:root {
+  --color-bg-primary: #d0d6df;
+  --color-bg-primary-offset: #f1f3f7;
+  --color-bg-secondary: #fff;
+  --color-text-primary: #3a3c42;
+  --color-text-primary-offset: #898c94;
+  --color-orange: #dc9960;
+  --color-green: #1eb8b1;
+  --color-purple: #657cc4;
+  --color-black: var(--color-text-primary);
+  --color-red: #d92027;
+}
 
-
-div {
-  margin-left: 50vw;
-  margin-right: 25vw;
-  width: 500px;
+.menu-list {
+  margin: 0;
+  display: block;
+  width: 100%;
   padding: 8px;
+  & + .menu-list {
+    border-top: 1px solid #ddd;
+  }
+}
+.menu-sub-list {
+  display: none;
+  padding: 8px;
+  background-color: $dark;
+  border-radius: 10px;
+  box-shadow: 0 10px 20px rgba(#404040, 0.15);
+  position: absolute;
+  left: 100%;
+  right: 0;
+  z-index: 100;
+  width: 100%;
+  top: 0;
+  flex-direction: column;
+  &:hover {
+    display: flex;
+  }
+}
+
+.menu-item {
+  position: relative;
+}
+
+.menu-button {
+  cursor: pointer;
+  font-family: arial, sans-serif;
+  font-size: 20px;
+  text-align: left;
+  text-indent: 16px;
+  border: none;
+  box-shadow: 0 10px 20px rgba(#404040, 0.15);
+  background-color: $dark;
+  color: $light;
+  border-radius: .4em;
+  width: 260px;
+  height: 42px;
+  margin: 5px 0px 5px 0px;
+  
+  &.is-selected {
+      color: $dark;
+      animation: coolAppear 1s ease-in 0s 1 forwards;
+  }
+  &:hover {
+    background-color: $dark;
+    & + .menu-sub-list {
+      display: flex;
+    }
+    svg {
+      stroke: var(--color-text-primary);
+    }
+  }
+  svg {
+    flex-shrink: 0;
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+    stroke: var(--color-text-primary-offset);
+    &:nth-of-type(2) {
+      margin-right: 0;
+      position: absolute;
+      right: 8px;
+    }
+  }
+}
+
+// Codepen spesific styling - only to center the elements in the pen preview and viewport
+.container {
+  float: right;
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+	align-items: flex-start;
+	align-content: flex-start;
+	background-color: $mid;
+	margin: 50px auto 50px 150px;
+	height: 80vh;
+	width: 300px;
+  border-radius: .4em;
+	position: fixed;
+}
+// End Codepen spesific styling
+
+/**
+test
+**/
+
+#title {
+  font-family: arial, sans-serif;
+  text-align: center;
+  font-size: 26px;
+  font-weight: bolder;
+  color: $dark;
+  width: 260px;
+  height: 42px;
+  margin: 25px 0px 0px 0px;
+}
+
+#leftpanel {
+  float: right;
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+  box-shadow: 0 10px 20px rgba(#404040, 0.15);
+	align-items: flex-start;
+	align-content: flex-start;
+	background-color: $mid;
+	margin: 50px auto 50px 150px;
+	height: 80vh;
+	width: 300px;
+  border-radius: .4em;
+	position: fixed;
+}
+
+#topbuttons {
+  margin-left: 500px;
+  margin-right: auto;
+  width: 50vw;
+  min-width: 500px;
+  
 }
 
 
 .material-icons.style { 
   cursor: pointer;
-  color: #ebc4a4; 
+  color: $light; 
   background-color: $dark;
+  box-shadow: 0 10px 20px rgba(#404040, 0.15);
   background-repeat: no-repeat;
   border-radius: 50%;
   width: 50px;
@@ -28,13 +163,17 @@ div {
 }
 
 button {
+    cursor: pointer;
+    font-family: arial, sans-serif;
+    font-size: 18px;
     border: none; // No border
+    box-shadow: 0 10px 20px rgba(#404040, 0.15);
     background-color: $dark;
     color: $light;
     border-radius: .4em;
     width: 100px;
     height: 32px;
-    margin: 5px 5px 5px 5px;
+    margin: 10px 10px 10px 0px;
     
     &.is-selected {
         color: $dark;
@@ -43,13 +182,36 @@ button {
 }
 
 .button2 {
+  cursor: pointer;
   border: none; // No border
+  box-shadow: 0 10px 20px rgba(#404040, 0.15);
   background-color: $dark;
   color: $light;
   border-radius: .4em;
   width: 100px;
   height: 32px;
   margin: 5px 5px 5px 5px;
+  
+  &.is-selected {
+      color: $dark;
+      animation: coolAppear 1s ease-in 0s 1 forwards;
+  }
+}
+
+.button3 {
+  cursor: pointer;
+  font-family: arial, sans-serif;
+  font-size: 20px;
+  text-align: left;
+  text-indent: 16px;
+  border: none; // No border
+  box-shadow: 0 10px 20px rgba(#404040, 0.15);
+  background-color: $dark;
+  color: $light;
+  border-radius: .4em;
+  width: 260px;
+  height: 42px;
+  margin: 5px 0px 5px 0px;
   
   &.is-selected {
       color: $dark;
@@ -72,13 +234,15 @@ button {
 
 table {
     font-family: arial, sans-serif;
+    font-size: 20px;
     height: auto;
     border-collapse: collapse;
-    margin-left: 400px;
-    margin-right: 25vw;
+    margin-left: 500px;
+    margin-right: auto;
     width: 50vw;
     min-width: 500px;
     padding: 8px;
+    
   
 tbody{
 
@@ -96,6 +260,7 @@ tbody{
             line-height: 50px;
             vertical-align: middle;
             border-radius: 50%;
+            box-shadow: 0 10px 20px rgba(#404040, 0.15);
             text-align: center;
             font-weight: 700;
             &.male {
@@ -135,7 +300,7 @@ tfoot{
 }
 tr:nth-child(even) {
   color: $dark;
-  background-color: #b4947f;
+  background-color: $mid;
 }
 
 tr:nth-child(odd) {
