--- a/src/app/shared/formulaire-add-general/formulaire-add-general.component.html
+++ b/src/app/shared/formulaire-add-general/formulaire-add-general.component.html
@@ -1,133 +1,157 @@
+<div>{{ class_poe_or_Stagiaire }}</div>
+<ng-container *ngIf="class_poe_or_Stagiaire == 'stagiaires'">
+  <form *ngIf="addForm" [formGroup]="addForm" (ngSubmit)="onSubmit()">
+    <!-- form fields go here -->
+    <mat-form-field>
+      <input
+        matInput
+        placeholder="Nom du stagiaire..."
+        type="text"
+        formControlName="lastName"
+      />
+      <mat-error *ngIf="addForm.controls['lastName'].errors">
+        Le nom du stagiaire est obligatoire !
+      </mat-error>
+    </mat-form-field>
 
-<div> {{class_poe_or_Stagiaire}} </div>
-<ng-container *ngIf="class_poe_or_Stagiaire=='stagiaires'">
-    <form [formGroup]="addForm" (ngSubmit)="onSubmit()">
-        
-        <!-- form fields go here -->
-        <mat-form-field>
-            <input matInput placeholder="Nom du stagiaire..." type="text" formControlName="lastName">
-            <mat-error *ngIf="addForm.controls['lastName'].errors">
-                Le nom du stagiaire est obligatoire !
-            </mat-error>
-        </mat-form-field>
-    
-        <mat-form-field>
-            <input matInput placeholder="Prénom du stagiaire..." type="text" formControlName="firstName">
-            <mat-error *ngIf="addForm.controls['firstName'].errors">
-                Le prénom du stagiaire est obligatoire !
-            </mat-error>
-        </mat-form-field>
-    
-        <mat-form-field appearance="fill">
-            <mat-label>Choose a date</mat-label>
-            <input matInput [matDatepicker]="picker" formControlName="birthDate">
-            <mat-hint>DD/MM/YYYY</mat-hint>
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-datepicker #picker></mat-datepicker>
-    
-            <mat-error *ngIf="addForm.controls['birthDate'].errors && addForm.controls['birthDate'].touched">
-                <span *ngIf="addForm.controls['birthDate'].hasError('required')">
-                    La date de naissance est obligatoire.
-                </span> 
-                <span *ngIf="addForm.controls['birthDate'].hasError('dateLessThan')">
-                    Le stagiaire n'a pas 18 ans...
-                </span>         
-            </mat-error>
-        </mat-form-field>
-    
-        <mat-form-field>
-            <input matInput placeholder="Email..." type="text" formControlName="email">
-            <mat-error *ngIf="addForm.controls['email'].errors">
-                L'adresse email est obligatoire ou n'est pas de la bonne forme
-            </mat-error>
-        </mat-form-field>
-    
-        <mat-form-field>
-            <input matInput placeholder="Téléphone..." type="text" formControlName="phoneNumber">
-        </mat-form-field>
-    
-        <mat-radio-group formControlName="gender">
-            <mat-radio-button [value]="'M'">Masculin</mat-radio-button>
-            <mat-radio-button [value]="'F'">Féminin</mat-radio-button>
-        </mat-radio-group>
-    
-        <button mat-raised-button color="primary" type="submit" [disabled]="addForm.invalid">
-            Add
-        </button>
-    
-        {{ addForm.controls['birthDate'].errors | json }}
-    </form>
+    <mat-form-field>
+      <input
+        matInput
+        placeholder="Prénom du stagiaire..."
+        type="text"
+        formControlName="firstName"
+      />
+      <mat-error *ngIf="addForm.controls['firstName'].errors">
+        Le prénom du stagiaire est obligatoire !
+      </mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+      <mat-label>Choose a date</mat-label>
+      <input matInput [matDatepicker]="picker" formControlName="birthDate" />
+      <mat-hint>DD/MM/YYYY</mat-hint>
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+
+      <mat-error
+        *ngIf="
+          addForm.controls['birthDate'].errors &&
+          addForm.controls['birthDate'].touched
+        "
+      >
+        <span *ngIf="addForm.controls['birthDate'].hasError('required')">
+          La date de naissance est obligatoire.
+        </span>
+        <span *ngIf="addForm.controls['birthDate'].hasError('dateLessThan')">
+          Le stagiaire n'a pas 18 ans...
+        </span>
+      </mat-error>
+    </mat-form-field>
+
+    <mat-form-field>
+      <input
+        matInput
+        placeholder="Email..."
+        type="text"
+        formControlName="email"
+      />
+      <mat-error *ngIf="addForm.controls['email'].errors">
+        L'adresse email est obligatoire ou n'est pas de la bonne forme
+      </mat-error>
+    </mat-form-field>
+
+    <mat-form-field>
+      <input
+        matInput
+        placeholder="Téléphone..."
+        type="text"
+        formControlName="phoneNumber"
+      />
+    </mat-form-field>
+
+    <mat-radio-group formControlName="gender">
+      <mat-radio-button [value]="'M'">Masculin</mat-radio-button>
+      <mat-radio-button [value]="'F'">Féminin</mat-radio-button>
+    </mat-radio-group>
+
+    <button
+      mat-raised-button
+      color="primary"
+      type="submit"
+      [disabled]="addForm.invalid"
+    >
+      Add
+    </button>
+
+    {{ addForm.controls["birthDate"].errors | json }}
+  </form>
 </ng-container>
 
-<ng-container *ngIf="class_poe_or_Stagiaire=='poes'">
+<ng-container *ngIf="class_poe_or_Stagiaire == 'poes'">
+  <form [formGroup]="addForm" (ngSubmit)="onSubmit()">
+    <!-- form fields go here -->
+    <mat-form-field>
+      <input
+        matInput
+        placeholder="Nom de formation..."
+        type="text"
+        formControlName="title"
+      />
+      <mat-error *ngIf="addForm.controls['title'].errors">
+        Le nom de la formation est obligatoire!
+      </mat-error>
+    </mat-form-field>
 
+    <mat-form-field appearance="fill">
+      <mat-label>La date du début</mat-label>
+      <input matInput [matDatepicker]="picker" formControlName="beginDate" />
+      <mat-hint>DD/MM/YYYY</mat-hint>
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
 
-    <form [formGroup]="addForm" (ngSubmit)="onSubmit()">
-        <!-- form fields go here -->
-        <mat-form-field>
-          <input
-            matInput
-            placeholder="Nom de formation..."
-            type="text"
-            formControlName="title"
-          />
-          <mat-error *ngIf="addForm.controls['title'].errors">
-            Le nom de la formation est obligatoire!
-          </mat-error>
-        </mat-form-field>
-      
-        <mat-form-field appearance="fill">
-          <mat-label>La date du début</mat-label>
-          <input matInput [matDatepicker]="picker" formControlName="beginDate" />
-          <mat-hint>DD/MM/YYYY</mat-hint>
-          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-          <mat-datepicker #picker></mat-datepicker>
-      
-          <mat-error
-            *ngIf="
-              addForm.controls['beginDate'].errors &&
-              addForm.controls['beginDate'].touched
-            "
-          >
-            <span *ngIf="addForm.controls['beginDate'].hasError('required')">
-              La date du début est obligatoire.
-            </span>
-          </mat-error>
-        </mat-form-field>
-      
-        <mat-form-field appearance="fill">
-          <mat-label>La date de fin</mat-label>
-          <input matInput [matDatepicker]="pickerto" formControlName="endDate" />
-          <mat-hint>DD/MM/YYYY</mat-hint>
-          <mat-datepicker-toggle matSuffix [for]="pickerto"></mat-datepicker-toggle>
-          <mat-datepicker #pickerto></mat-datepicker>
-      
-          <mat-error
-            *ngIf="
-              addForm.controls['endDate'].errors &&
-              addForm.controls['endDate'].touched
-            "
-          >
-            <span *ngIf="addForm.controls['endDate'].hasError('required')">
-              La date de fin est obligatoire.
-            </span>
-          </mat-error>
-        </mat-form-field>
-      
-        <mat-radio-group formControlName="poeType">
-          <mat-radio-button [value]="'POEI'">POEI</mat-radio-button>
-          <mat-radio-button [value]="'POEC'">POEC</mat-radio-button>
-        </mat-radio-group>
-      
-        <button
-          mat-raised-button
-          color="primary"
-          type="submit"
-          [disabled]="addForm.invalid"
-        >
-          Ajouter
-        </button>
-      </form>
+      <mat-error
+        *ngIf="
+          addForm.controls['beginDate'].errors &&
+          addForm.controls['beginDate'].touched
+        "
+      >
+        <span *ngIf="addForm.controls['beginDate'].hasError('required')">
+          La date du début est obligatoire.
+        </span>
+      </mat-error>
+    </mat-form-field>
 
-    
+    <mat-form-field appearance="fill">
+      <mat-label>La date de fin</mat-label>
+      <input matInput [matDatepicker]="pickerto" formControlName="endDate" />
+      <mat-hint>DD/MM/YYYY</mat-hint>
+      <mat-datepicker-toggle matSuffix [for]="pickerto"></mat-datepicker-toggle>
+      <mat-datepicker #pickerto></mat-datepicker>
+
+      <mat-error
+        *ngIf="
+          addForm.controls['endDate'].errors &&
+          addForm.controls['endDate'].touched
+        "
+      >
+        <span *ngIf="addForm.controls['endDate'].hasError('required')">
+          La date de fin est obligatoire.
+        </span>
+      </mat-error>
+    </mat-form-field>
+
+    <mat-radio-group formControlName="poeType">
+      <mat-radio-button [value]="'POEI'">POEI</mat-radio-button>
+      <mat-radio-button [value]="'POEC'">POEC</mat-radio-button>
+    </mat-radio-group>
+
+    <button
+      mat-raised-button
+      color="primary"
+      type="submit"
+      [disabled]="addForm.invalid"
+    >
+      Ajouter
+    </button>
+  </form>
 </ng-container>
