--- a/src/app/stagiaires/list/list.component.html
+++ b/src/app/stagiaires/list/list.component.html
@@ -1,6 +1,5 @@
 <body>
 
-
   <div id="leftpanel">
 
     <div id="title">
@@ -112,8 +111,8 @@
 
     <tfoot>
       <tr>
-        <td colspan="5">
-          {{getDisplayRowsNumber()}}/{{stagiaires.length}}
+        <td colspan="3" style="float: right">
+          {{getDisplayRowsNumber()}}/{{stagiaires.length}} 3
         </td>
       </tr>
 
