--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,5 +4,5 @@ html, body { height: 100%; }
 body { 
     margin: 0; 
     font-family: Roboto, "Helvetica Neue", sans-serif; 
-    background-color:rgb(133, 88, 88);
+    background-color: white;
 }
