--- a/src/app/stagiaires/list/list.component.scss
+++ b/src/app/stagiaires/list/list.component.scss
@@ -1,7 +1,3 @@
-$dark: rgb(88, 42, 42);
-$light: #ebc4a4;
-$mid: #b4947f;
-
 /**
 * SCSS Rules
 **/
@@ -11,17 +7,12 @@ $mid: #b4947f;
   display: block;
   width: 100%;
   padding: 8px;
-  & + .menu-list {
-    border-top: 1px solid #ddd;
-  }
 }
+
 .menu-sub-list {
   display: none;
   padding: 8px;
-  background-color: $dark;
   border-radius: 10px;
-  box-shadow: 0 10px 20px rgba(#404040, 0.15);
-  position: absolute;
   left: 100%;
   right: 0;
   z-index: 100;
@@ -44,20 +35,22 @@ $mid: #b4947f;
   text-align: left;
   text-indent: 16px;
   border: none;
-  box-shadow: 0 10px 20px rgba(#404040, 0.15);
-  background-color: $dark;
-  color: $light;
+  box-shadow: 0 10px 20px rgba(darkslategrey, 0.15);
+  background-color: grey;
+  color: white;
   border-radius: .4em;
   width: 260px;
   height: 42px;
   margin: 5px 0px 5px 0px;
   
-  &.is-selected {
-      color: $dark;
-      animation: coolAppear 1s ease-in 0s 1 forwards;
-  }
   &:hover {
-    background-color: $dark;
+    background-color: black;
+    color: white;
+  }
+
+  &:focus {
+    color: white;
+    animation: coolAppear 0.35s ease-in 0s 1 forwards;
     & + .menu-sub-list {
       display: flex;
     }
@@ -74,33 +67,16 @@ $mid: #b4947f;
     &:nth-of-type(2) {
       margin-right: 0;
       position: absolute;
-      right: 8px;
     }
   }
 }
-
-.container {
-  float: right;
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: center;
-	align-items: flex-start;
-	align-content: flex-start;
-	background-color: $mid;
-	margin: 50px auto 50px 150px;
-	height: 80vh;
-	width: 300px;
-  border-radius: .4em;
-	position: fixed;
-}
-
 
 #title {
   font-family: arial, sans-serif;
   text-align: center;
   font-size: 26px;
   font-weight: bolder;
-  color: $dark;
+  color: black;
   width: 260px;
   height: 42px;
   margin: 25px 0px 0px 0px;
@@ -111,12 +87,10 @@ $mid: #b4947f;
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: center;
-  box-shadow: 0 10px 20px rgba(#404040, 0.15);
 	align-items: flex-start;
 	align-content: flex-start;
-	background-color: $mid;
 	margin: 50px auto 50px 150px;
-	height: 80vh;
+	height: 360px;
 	width: 300px;
   border-radius: .4em;
 	position: fixed;
@@ -130,14 +104,13 @@ $mid: #b4947f;
   
 }
 
-
 .material-icons.style { 
   cursor: pointer;
-  color: $light; 
-  background-color: $dark;
-  box-shadow: 0 10px 20px rgba(#404040, 0.15);
+  color: white; 
+  background-color: black;
+  box-shadow: 0 10px 20px rgba(darkslategrey, 0.15);
   background-repeat: no-repeat;
-  border-radius: 50%;
+  border-radius: .4em;
   width: 50px;
   height: 50px;
   margin: 10px 5px 10px 5px;
@@ -149,48 +122,58 @@ button {
     font-family: arial, sans-serif;
     font-size: 18px;
     border: none; // No border
-    box-shadow: 0 10px 20px rgba(#404040, 0.15);
-    background-color: $dark;
-    color: $light;
+    box-shadow: 0 10px 20px rgba(darkslategrey, 0.15);
+    background-color: grey;
+    color: white;
     border-radius: .4em;
     width: 100px;
     height: 32px;
-    margin: 10px 10px 10px 0px;
+    margin: 10px 5px 10px 5px;
     
-    &.is-selected {
-        color: $dark;
-        animation: coolAppear 1s ease-in 0s 1 forwards;
+    &:hover {
+      background-color: black;
+      color: white;
+    }
+  
+    &:focus {
+      color: white;
+      animation: coolAppear 0.35s ease-in 0s 1 forwards;
     }
 }
 
 .button2 {
   cursor: pointer;
   border: none; // No border
-  box-shadow: 0 10px 20px rgba(#404040, 0.15);
-  background-color: $dark;
-  color: $light;
+  box-shadow: 0 10px 20px rgba(darkslategrey, 0.15);
+  background-color: grey;
+  color: white;
   border-radius: .4em;
   width: 100px;
   height: 32px;
   margin: 5px 5px 5px 5px;
   
-  &.is-selected {
-      color: $dark;
-      animation: coolAppear 1s ease-in 0s 1 forwards;
+  &:hover {
+    background-color: black;
+    color: white;
+  }
+
+  &:focus {
+    color: white;
+    animation: coolAppear 0.35s ease-in 0s 1 forwards;
   }
 }
 
 
 @keyframes coolAppear {
     0% {
-        background-color: lighten($light, 80%);
+      background-color: darken(black, 80%);
     }
     50% {
-        background-color: lighten($light, 40%);
-        transform: rota;
+      background-color: darken(black, 40%);
     }
     100% {
-        background-color: $light;
+      background-color: white;
+      color: black;
     }
 }
 
@@ -209,7 +192,7 @@ table {
 tbody{
 
     text-align: left;
-    color: $dark;
+    color: black;
   
   td {
     &:first-child {
@@ -219,25 +202,25 @@ tbody{
             width: 50px;
             height: 50px;
             margin: 10px 5px 10px 5px;
+            border-radius: .4em;
             line-height: 50px;
             vertical-align: middle;
-            border-radius: 50%;
-            box-shadow: 0 10px 20px rgba(#404040, 0.15);
+            box-shadow: 0 10px 20px rgba(darkslategrey, 0.15);
             text-align: center;
-            font-weight: 700;
+            font-weight: bolder;
             &.male {
-                background-color: rgb(103, 111, 214);
-                color: #ffffff;
+                background-color: royalblue;
+                color: white;
             }
 
             &.female {
-                background-color: rgb(214, 122, 168);
-                color: #ffffff;
+                background-color: hotpink;
+                color: white;
             }
 
             &.other {
-              background-color: rgb(122, 214, 168);
-              color: #ffffff;
+              background-color: forestgreen;
+              color: white;
           }
         }
     }
@@ -248,25 +231,22 @@ tbody{
 }
  
 th{
-  color: $dark;
+  color: black;
   text-align: left;
 }
 
 tfoot{
   font-weight: bolder;
-  text-align: right;
-  color: $dark;
-  
-
-
+  color: black;
 }
+
 tr:nth-child(even) {
-  color: $dark;
-  background-color: $mid;
+  color: black;
+  background-color: aliceblue;
 }
 
 tr:nth-child(odd) {
-  color: $light;
+  color: black;
 }
 }
 
