--- a/src/app/shared/formulaire-add-general/formulaire-add-general.component.html
+++ b/src/app/shared/formulaire-add-general/formulaire-add-general.component.html
@@ -19,7 +19,7 @@
         </mat-form-field>
     
         <mat-form-field appearance="fill">
-            <mat-label>Choose a date</mat-label>
+            <mat-label>Date de naissance</mat-label>
             <input matInput [matDatepicker]="picker" formControlName="birthDate">
             <mat-hint>DD/MM/YYYY</mat-hint>
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
@@ -54,8 +54,7 @@
         <button mat-raised-button color="primary" type="submit" [disabled]="addForm.invalid">
             Add
         </button>
-    
-        {{ addForm.controls['birthDate'].errors | json }}
+
     </form>
 </ng-container>
 
